# oss-first-pass

./: .gitignore  LICENSE  README.md  example-report.md  pyproject.toml
.github/workflows/: test.yml
src/oss_first_pass/: __init__.py  analyzer.py  cli.py  report.py
tests/: test_analyzer.py
tests/fixtures/repo_with_setup_gap/: README.md
tests/fixtures/repo_with_tests/: CONTRIBUTING.md  README.md
